Mikes first commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <p>
-            Content goes here :)
+            Content goes here :) Mike editing
         </p>
         <button class="click-me">Click me!</button>
     </div>
