Loading normalize.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Hampshire web</title>
     <meta charset="utf-8">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/hampshire.css" rel="stylesheet">
 
     <script type="text/javascript" src="libs/jquery-2.1.0.min.js"></script>
