--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
     <title>Hampshire web</title>
     <meta charset="utf-8">
+    <!-- Stylesheets -->
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/hampshire.css" rel="stylesheet">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
+    <!-- Javascript -->
     <script type="text/javascript" src="libs/jquery-2.1.0.min.js"></script>
-
     <script type="text/javascript" src="js/hampshire.js"></script>
 </head>
 <body>
