--- a/index.html
+++ b/index.html
@@ -1,30 +1,64 @@
 <html lang="en">
 <head>
-    <title>Hampshire web</title>
+    <title>Pioneer Valley Citizen Science</title>
     <meta charset="utf-8">
     <!-- Stylesheets -->
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/hampshire.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/base.css">
 
     <!-- Javascript -->
     <script type="text/javascript" src="libs/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="js/hampshire.js"></script>
 </head>
 <body>
-    <div>
-        <p>
-            Content goes here :) Mike editing
-        </p>
-        <button class="click-me">Click me!</button>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Pioneer Valley Citizen Science Web</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum voluptatum optio quia consequuntur autem ad est enim corporis qui magnam officiis aspernatur nobis accusantium.</p>
+      </div>
     </div>
 
-    <script type="text/javascript">
-        jQuery(document).ready(function() {
-          // extending jQuery http://stackoverflow.com/questions/31044/is-there-an-exists-function-for-jquery
-          jQuery.fn.exists = function(){return this.length>0;}
-          Hampshire.init();
-        });
-    </script>
+    <div class="container">
+
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="#">Science Issues</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Get Connected</a></li>
+                <li><a href="#">About Us</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+
+        <div class="row-fluid">
+
+        </div>
+
+        <div class="row-fluid">
+
+        </div>
+
+      <hr>
+
+      <footer></footer>
+    </div>
 </body>
 </html>
