added nivo, restructure file tree

--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,19 @@
 <html lang="en">
 <head>
-    <title>Pioneer Valley Citizen Science - Projects</title>
+    <title>Pioneer Valley Citizen Science</title>
     <meta charset="utf-8">
     <!-- Stylesheets -->
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/hampshire.css" rel="stylesheet">
+    <link href="css/libs/normalize.css" rel="stylesheet">
+    <link href="css/libs/hampshire.css" rel="stylesheet">
+    <link href="css/nivo-slider.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css">
 
     <!-- Javascript -->
-    <script type="text/javascript" src="libs/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript/libs" src="libs/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="js/hampshire.js"></script>
+    <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"> </script>
+    <script type="text/javascript" src="js/jquery.nivo.slider.js"> </script>
 </head>
 <body>
 
