--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <!-- Stylesheets -->
     <link href="css/libs/normalize.css" rel="stylesheet">
-    <link href="css/hampshire.css" rel="stylesheet">
     <link href="css/nivo-slider.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link href="css/hampshire.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
 
     <!-- Javascript -->
@@ -14,13 +14,14 @@
     <script type="text/javascript" src="js/hampshire.js"></script>
     <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"> </script>
     <script type="text/javascript" src="js/jquery.nivo.slider.js"> </script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Pioneer Valley Citizen Science Web</h1>
+        <h1><a href="index.html">Pioneer Valley Citizen Science Web</a></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum voluptatum optio quia consequuntur autem ad est enim corporis qui magnam officiis aspernatur nobis accusantium.</p>
       </div>
     </div>
@@ -42,10 +43,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="#">Science Issues</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Get Connected</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="science-issues.html">Science Issues</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="connected.html">Get Connected</a></li>
+                <li><a href="about.html">About Us</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
