--- a/connected.html
+++ b/connected.html
@@ -53,7 +53,7 @@
         </nav>
 
         <div class="row-fluid">
-
+            <h2><a href="https://www.hampshire.edu/">Get Connected!</a></h2>
         </div>
 
         <div class="row-fluid">
