--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1><a href="index.html">Pioneer Valley Citizen Science Web</a></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum voluptatum optio quia consequuntur autem ad est enim corporis qui magnam officiis aspernatur nobis accusantium.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum.</p>
       </div>
     </div>
 
@@ -53,7 +53,44 @@
         </nav>
 
         <div class="row-fluid">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
 
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img src="assets/bud_burst_slider_image.jpg" alt="...">
+                  <div class="carousel-caption">
+                    <h1>Bud Burst</h1>
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="assets/nest_watch_slider_image.jpg" alt="...">
+                  <div class="carousel-caption">
+                    <h1>Nest Watch</h1>
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="assets/salamander_watch_slider_image.jpg" alt="...">
+                  <div class="carousel-caption">
+                    <h1>Salamander Watch</h1>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+              </a>
+            </div>
         </div>
 
         <div class="row-fluid">
