--- a/science-issues.html
+++ b/science-issues.html
@@ -22,7 +22,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1><a href="index.html">Pioneer Valley Citizen Science Web</a></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum voluptatum optio quia consequuntur autem ad est enim corporis qui magnam officiis aspernatur nobis accusantium.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum.</p>
       </div>
     </div>
 
@@ -53,7 +53,7 @@
         </nav>
 
         <div class="row-fluid">
-
+            <h1> Coming Soon!</h2>
         </div>
 
         <div class="row-fluid">
