--- a/science-issues.html
+++ b/science-issues.html
@@ -2,12 +2,15 @@
 <head>
     <title>Pioneer Valley Citizen Science</title>
     <meta charset="utf-8">
+
     <!-- Stylesheets -->
     <link href="css/libs/normalize.css" rel="stylesheet">
     <link href="css/nivo-slider.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="css/hampshire.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/typography.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto|Open+Sans|Metrophobic' rel='stylesheet' type='text/css'>
 
     <!-- Javascript -->
     <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
@@ -15,6 +18,7 @@
     <script type="text/javascript" src="js/jquery.nivo.slider.pack.js"> </script>
     <script type="text/javascript" src="js/jquery.nivo.slider.js"> </script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/active.js"></script>
 </head>
 <body>
 
