--- a/projects.html
+++ b/projects.html
@@ -57,33 +57,25 @@
 
         <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image" src="assets/bud_burst_photo_icon_notext.png">
-          <h2>BUD BURST</h2>
+          <h2>Bud Burst</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p><a class="btn btn-default" href="#" role="button">Join the Watch! &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image" src="assets/nest_watch_photo_icon_notext.png">
-          <h2>NEST WATCH</h2>
+          <h2>Nest Watch</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">Join the Watch! &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image" src="assets/salamander_watch_photo_icon_notext.png">
-          <h2>SALAMANDER WATCH</h2>
+          <h2>Salamader Watch</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">Join the Watch! &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
-
-        <div class="row-fluid">
-
-        </div>
-
-      <hr>
-
-      <footer></footer>
     </div>
 </body>
 </html>
