transparent header, corrected links, centered images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Pioneer Valley Citizen Science</title>
     <meta charset="utf-8">
+
     <!-- Stylesheets -->
     <link href="css/libs/normalize.css" rel="stylesheet">
     <link href="css/nivo-slider.css" rel="stylesheet">
@@ -25,7 +26,6 @@
     <div class="jumbotron">
       <div class="container">
         <h1><a href="index.html">Pioneer Valley Citizen Science Web</a></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum.</p>
       </div>
     </div>
 
@@ -67,22 +67,28 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="assets/bud_burst_slider_image.jpg" alt="...">
-                  <div class="carousel-caption">
-                    <h1>Bud Burst</h1>
-                  </div>
+                  <a href="projects.html">
+                    <img src="assets/bud_burst_slider_image.jpg" alt="...">
+                    <div class="carousel-caption">
+                      <h1>Bud Burst</h1>
+                    </div>
+                  </a>
                 </div>
                 <div class="item">
-                  <img src="assets/nest_watch_slider_image.jpg" alt="...">
-                  <div class="carousel-caption">
-                    <h1>Nest Watch</h1>
-                  </div>
+                  <a href="projects.html">
+                    <img src="assets/nest_watch_slider_image.jpg" alt="...">
+                    <div class="carousel-caption">
+                      <h1>Nest Watch</h1>
+                    </div>
+                  </a>
                 </div>
                 <div class="item">
-                  <img src="assets/salamander_watch_slider_image.jpg" alt="...">
-                  <div class="carousel-caption">
-                    <h1>Salamander Watch</h1>
-                  </div>
+                  <a href="projects.html">
+                    <img src="assets/salamander_watch_slider_image.jpg" alt="...">
+                    <div class="carousel-caption">
+                      <h1>Salamander Watch</h1>
+                    </div>
+                  </a>
                 </div>
               </div>
 
