--- a/about.html
+++ b/about.html
@@ -25,7 +25,6 @@
     <div class="jumbotron">
       <div class="container">
         <h1><a href="index.html">Pioneer Valley Citizen Science Web</a></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, nesciunt, voluptate ut suscipit unde laborum.</p>
       </div>
     </div>
 
@@ -56,7 +55,7 @@
         </nav>
 
         <div class="row-fluid">
-            <h2><a href="http://encorelab.org">Encore Lab</a></h2>
+            <h2><a href="http://www.hampshire.edu/cs/tzimmerman.htm">Zimmerman/Hampshire</a></h2>
         </div>
     </div>
 </body>
