--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/typography.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto|Open+Sans|Metrophobic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/media-queries.css">
 
     <!-- Javascript -->
     <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
