work on projects page

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
         </nav>
 
         <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <div class="row-fluid">
         <div class="col-sm-4">
           <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image" src="assets/salamander_watch_photo_icon_notext.png">
           <h2>Salamader Watch</h2>
