updated modal thumbnail images

--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -96,9 +96,9 @@
 					<h4 class="modal-title" id="biodiversity-title">Biodiversity</h4>
 				</div>
 				<div class="modal-body row">
-					<div class="col-md-4 hidden-sm hidden-xs">
+					<div class="col-xs-12 col-sm-4">
 						<div class="thumbnail">
-							<img alt="Biodiversity Icon" src="/images/issue_biodiversity.png"/>
+							<img alt="Biodiversity Icon" src="/images/modal_biodiversity.png"/>
 						</div>
 					</div>
 					<div class="col-md-8">
@@ -118,9 +118,9 @@
 					<h4 class="modal-title" id="climate-change-title">Climate Change</h4>
 				</div>
 				<div class="modal-body row">
-					<div class="col-md-4 hidden-sm hidden-xs">
+					<div class="col-xs-12 col-sm-4">
 						<div class="thumbnail">
-							<img alt="Climate Change Icon" src="/images/issue_climatechange.png"/>
+							<img alt="Climate Change Icon" src="/images/modal_climate.png"/>
 						</div>
 					</div>
 					<div class="col-md-8">
@@ -141,9 +141,9 @@
 					<h4 class="modal-title" id="invasive-title">Invasive Species</h4>
 				</div>
 				<div class="modal-body row">
-					<div class="col-md-4 hidden-sm hidden-xs">
+					<div class="col-xs-12 col-sm-4">
 						<div class="thumbnail">
-							<img alt="Invasive Species Icon" src="/images/issue_invasivespecies.png"/>
+							<img alt="Invasive Species Icon" src="/images/modal_invasive.png"/>
 						</div>
 					</div>
 					<div class="col-md-8">
@@ -163,12 +163,12 @@
 					<h4 class="modal-title" id="habitat-loss-title">Habitat Loss</h4>
 				</div>
 				<div class="modal-body row">
-					<div class="col-md-4 hidden-sm hidden-xs">
+					<div class="col-xs-12 col-sm-4">
 						<div class="thumbnail">
-							<img alt="Habitat Loss Icon" src="/images/issue_habitatloss.png"/>
+							<img alt="Habitat Loss Icon" src="/images/modal_habitat.png"/>
 						</div>
 					</div>
-					<div class="col-md-8">
+					<div class="col-xs-12 col-sm-8">
 						<p>Habitat loss is a major threat to biodiversity both in the Pioneer Valley and the wider world. Human activity is usually the cause of habitat loss, either directly through agriculture, land and water development, or indirectly through climate change <span class="text-danger">(link to the climate change page)</span> or introduction of invasive species <span class="text-danger">(link to the invasive species page)</span>.</p>
 						<p>The Connecticut River flows through the Pioneer Valley, and is home to a variety of aquatic species. However, human infrastructure in the form of dams and culverts has changed the natural flow regime and chemistry of the river, which has concerning implications for its ecology. There are 1,422 dams in MA and CT alone, which averages 1 dam per 6.6 km of river, in addition to 2,885 culverts in the Valley. The alterations to the river's flow regime restrict access to quality habitat for one or more life stages of various species, such as the ability for<span title="fish which spend most of their life in seawater, but lay their eggs in freshwater">anadromous fish</span>to reach preferred freshwater spawning habitats from the sea, as well as blocking access to thermal refuges for brook trout populations. In addition, pollution and wastewater runoff from flooding and stormwaters in urban areas also contribute to making the Connecticut River unsuitable for habitation.</p>
 						<p>Urban sprawl represents another threat to habitat loss, as natural environments are replaced with man-made buildings and roads. Neighborhood Nestwatch seeks to learn more about how habitat loss in the form of increasing urban sprawl impacts bird nesting habits. To learn more, click <a href="http://pvcitizenscience.org/projects/salamander-watch/">here</a> to get involved in Neighborhood Nestwatch.</p>
