--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -11,7 +11,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
 
-	<link href="css/hampshire-web.css" rel="stylesheet">
+	<link href="../css/styles.css" rel="stylesheet">
 
 	<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -59,25 +59,25 @@
 	<section class="container-fluid" id="environment">
 		<h2>Environmental Issues in the Pioneer Valley</h2>
 		<div class="row">
-			<div class="col-xs-12 col-sm-2 col-sm-offset-2">
+			<div class="col-xs-8 col-sm-2 col-sm-offset-2">
 				<a class="thumbnail" data-target="#biodiversity-icon" data-toggle="modal" href="#">
 					<img alt="Biodiversity Icon" class="img-responsive" src="/images/issue_biodiversity.png"/>
 					<h3 class="caption text-center">Biodiversity</h3>
 				</a>
 			</div>
-			<div class="col-xs-12 col-sm-2">
+			<div class="col-xs-8 col-sm-2">
 				<a class="thumbnail" data-target="#climate-change-icon" data-toggle="modal" href="#">
 					<img alt="Climate Change Icon" class="img-responsive" src="/images/issue_climatechange.png"/>
 					<h3 class="caption text-center">Climate Change</h3>
 				</a>
 			</div>
-			<div class="col-xs-12 col-sm-2">
+			<div class="col-xs-8 col-sm-2">
 				<a class="thumbnail" data-target="#invasive-species-icon" data-toggle="modal" href="#">
 					<img alt="Invasive Species Icon" class="img-responsive" src="/images/issue_invasivespecies.png"/>
 					<h3 class="caption text-center">Invasive Species</h3>
 				</a>
 			</div>
-			<div class="col-xs-12 col-sm-2">
+			<div class="col-xs-8 col-sm-2">
 				<a class="thumbnail" data-target="#habitat-loss-icon" data-toggle="modal" href="#">
 					<img alt="Habitat Loss Icon" class="img-responsive" src="/images/issue_habitatloss.png"/>
 					<h3 class="caption text-center">Habitat Loss</h3>
@@ -183,15 +183,15 @@
 	<section class="container-fluid" id="projects">
 		<h2>Citizen Science Projects</h2>
 		<div class="row">
-			<div class="col-md-4 top-buffer">
+			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
-					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop"/>
+					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop.jpg"/>
 				</div>
 				<h2>Leaf Drop</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!</p>
 				<a class="btn btn-primary" href="/investigations/hampshire-apps/leaf-drop" role="button">Learn More</a>
 			</div>
-			<div class="col-md-4 top-buffer">
+			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Image of buds on a tree" class="img-responsive" src="/images/icon_budburst.png"/>
 				</div>
@@ -199,7 +199,7 @@
 				<p>The Bud Burst project is a national citizen science project that seeks to learn more about how plants respond to changes in climate locally, regionally, and nationally. Participants report on appearances of plants, either tracking the progress of a single plant over the course of a year or once.</p>
 				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/bud-burst" role="button">Learn More</a> -->
 			</div>
-			<div class="col-md-4 top-buffer">
+			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Spotted salamander" class="img-responsive" src="/images/icon_salamanderwatch.png"/>
 				</div>
@@ -209,7 +209,7 @@
 			</div>
 		</div>
 		<div class="row top-buffer">
-			<div class="col-md-4 top-buffer">
+			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Nest containing three eggs" class="img-responsive" src="/images/icon_nestwatch.png"/>
 				</div>
@@ -217,7 +217,7 @@
 				<p>Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.</p>
 		  		<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/neighborhood-nestwatch" role="button">Learn More</a> -->
 			</div>
-			<div class="col-md-4 top-buffer">
+			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="A firefly in a hand" class="img-responsive" src="/images/icon_firefly.jpeg"/>
 				</div>
@@ -225,7 +225,7 @@
 				<p>The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.</p>
 		  <!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/firefly-watch" role="button">Learn More</a> -->
 			</div>
-			<div class="col-md-4 top-buffer">
+			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="A monarch butterfly" class="img-responsive" src="/images/icon_monarch.jpg"/>
 				</div>
