--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -23,9 +23,9 @@
 
 	<div class="jumbotron">
 		<div class="container">
-			<div class="page-header">
-				<h1><a href="#top">Pioneer Valley Citizen Science Collaboratory</a></h1>
-			</div>
+			<!-- <div class="page-header"> -->
+			<h1><a href="#top">Pioneer Valley<br>Citizen Science Collaboratory</a></h1>
+			<!-- </div> -->
 			<ul class="nav nav-pills">
 				<li><a href="#login" class="navbar-btn">Members</a></li>
 				<li><a href="#environment" class="navbar-btn">Environmental Issues in PV</a></li>
@@ -38,11 +38,11 @@
 	<!-- Sign Up Or Sign In -->
 	<section class="container-fluid" id="login">
 		<form role="form">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-3 col-sm-offset-2">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-5">
 				<h2 class="users text-right">New Users</h2>
 				<button type="submit" class="btn btn-primary pull-right">Join PVCS</button>
 			</div>
-			<div class="col-xs-10 col-sm-3 col-sm-offset-2">
+			<div class="col-xs-10 col-sm-5">
 				<h2 class="users">Existing Users</h2>
 				<div class="form-group">
 					<input type="email" class="form-control" id="inputEmail" placeholder="email address">
