added link hover effects; changed lorem ipsum & changed text to red

--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -188,7 +188,7 @@
 					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop.png"/>
 				</div>
 				<h3>Leaf Drop</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!</p>
+				<p class="text-danger">Echo Park Tonx sriracha, Truffaut tofu food truck paleo semiotics Marfa distillery small batch church-key 8-bit beard single-origin coffee. Jean shorts stumptown organic kitsch Pitchfork cred. Roof party meh ethical, readymade letterpress skateboard viral XOXO tofu distillery quinoa Austin single-origin coffee Echo Park mumblecore.</p>
 				<a class="btn btn-primary" href="/investigations/hampshire-apps/leaf-drop" role="button">Learn More</a>
 			</div>
 			<div class="col-xs-10 col-sm-4 top-buffer">
@@ -230,7 +230,7 @@
 					<img alt="A monarch butterfly" class="img-responsive" src="/images/icon_monarch.png"/>
 				</div>
 				<h3>Monarch Butterflies</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!</p>
+				<p class="text-danger">Small batch wayfarers kale chips slow-carb PBR&B Godard keffiyeh High Life blog. Austin 90's master cleanse, normcore artisan post-ironic swag ennui cardigan single-origin coffee church-key salvia beard kogi quinoa. McSweeney's you probably haven't heard of them hashtag, Williamsburg mumblecore messenger bag chillwave Carles. Pork belly Tonx actually fixie fap fashion axe, fanny pack freegan.</p>
 				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/monarch-butterflies" role="button">Learn More</a> -->
 			</div>
 		</div>
@@ -278,7 +278,7 @@
 		    	</div>
 		    	<div id="collapseThFour" class="panel-collapse collapse">
 		    		<div class="panel-body text-danger">
-		    			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, accusamus, natus odit saepe suscipit voluptates.
+		    			Fingerstache blog shabby chic occupy VHS mlkshk bitters ennui. Pop-up Williamsburg wolf, 90's Cosby sweater fashion axe paleo bitters Tumblr jean shorts normcore salvia beard Odd Future fingerstache. Kogi Tonx put a bird on it, letterpress sriracha YOLO church-key Pinterest +1 8-bit iPhone.
 		    		</div>
 		    	</div>
 			</div>
@@ -320,13 +320,14 @@
 		    	</div>
 		    	<div id="collapseSix" class="panel-collapse collapse">
 		    		<div class="panel-body">
-		    			JOIN PVCS today!&nbsp;&nbsp;<a class="join-now" href="#login">Join Now</a>
+		    			JOIN PVCS today!<a class="join-now" href="#login">Join Now</a>
 		    		</div>
 		    	</div>
 			</div>
 		</div>
 	</section>
 
+	<!-- About the Team -->
 	<section class="container-fluid" id="about-team">
 		<div class="panel panel-default">
 			<div class="panel-heading">
@@ -347,12 +348,12 @@
 	    				</div>
 	    				<div class="col-md-10">
 	    					<h4>Tim Zimmerman</h4>
-	    					<p>Tim Zimmerman is a Visiting Assistant Professor of Cognition and Education in the School of Cognitive Sciences at <a href="www.hampshire.edu" target="_blank">Hampshire College</a>. As a learning sciences researcher, he focuses on the learning of ocean and environmental science concepts and the design of learning tools that enhance such learning.  He studies science learning across formal (classroom) and <a href="informalscience.org" target="_blank">informal</a> (outdoor, aquarium, museums, field trips, etc.) contexts, the use of science knowledge for environmental decision-making.  His work often involves the design and use of Internet-connected, wired and mobile devices as learning tools.</p>
+	    					<p>Tim Zimmerman is a Visiting Assistant Professor of Cognition and Education in the School of Cognitive Sciences at <a href="https://www.hampshire.edu/" target="_blank">Hampshire College</a>. As a learning sciences researcher, he focuses on the learning of ocean and environmental science concepts and the design of learning tools that enhance such learning.  He studies science learning across formal (classroom) and <a href="http://informalscience.org/" target="_blank">informal</a> (outdoor, aquarium, museums, field trips, etc.) contexts, the use of science knowledge for environmental decision-making.  His work often involves the design and use of Internet-connected, wired and mobile devices as learning tools.</p>
 	    				</div>
 	    			</div>
 	    			<div class="row">
 	    				<div class="col-md-2">
-	    					<img alt="Profile shot of Jonathan Gardner" class="img-circle img-responsive" src="/images/people/jonathan-profile.png"/>
+	    					<img alt="Profile shot of Jonathan Gardner" class="img-circle img-responsive" src="/images/people/placeholder_male_superhero.png"/>
 	    				</div>
 	    				<div class="col-md-10">
 	    					<h4>Jonathan Gardner</h4>
@@ -361,7 +362,7 @@
 	    			</div>
 	    			<div class="row">
 	    				<div class="col-md-2">
-	    					<img alt="Profile shot of Chelsea LaValley" class="img-circle img-responsive" src="/images/people/jonathan-profile.png"/>
+	    					<img alt="Profile shot of Chelsea LaValley" class="img-circle img-responsive" src="/images/people/placeholder_female_superhero.png"/>
 	    				</div>
 	    				<div class="col-md-10">
 	    					<h4>Chelsea LaValley</h4>
@@ -451,7 +452,7 @@
 	    			<h3>Our Partners</h3>
 	    			<div class="col-md-12">
 	    				<ul class="list-unstyled">
-	    					<h4><li><a href="http://www.hitchcockcenter.org/">Hitchcock Center for the Environment</a></li></h4>
+	    					<li><h4><a href="http://www.hitchcockcenter.org/">Hitchcock Center for the Environment</a></h4></li>
 	    					<li><h4><a href="https://sites.google.com/site/susannahlerman/">Dr. Susannah Lerman,</a><span>&nbsp;&nbsp;UMass Amherst/Neighbourhood Nestwatch Project</span></h4></li>
 	    				</ul>
 	    			</div>
