added media queries stylesheet

--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -23,9 +23,7 @@
 
 	<div class="jumbotron">
 		<div class="container">
-			<!-- <div class="page-header"> -->
 			<h1><a href="#top">Pioneer Valley<br>Citizen Science Collaboratory</a></h1>
-			<!-- </div> -->
 			<ul class="nav nav-pills">
 				<li><a href="#login" class="navbar-btn">Members</a></li>
 				<li><a href="#environment" class="navbar-btn">Environmental Issues in PV</a></li>
@@ -189,7 +187,7 @@
 				</div>
 				<h3>Leaf Drop</h3>
 				<p class="text-danger">Echo Park Tonx sriracha, Truffaut tofu food truck paleo semiotics Marfa distillery small batch church-key 8-bit beard single-origin coffee. Jean shorts stumptown organic kitsch Pitchfork cred. Roof party meh ethical, readymade letterpress skateboard viral XOXO tofu distillery quinoa Austin single-origin coffee Echo Park mumblecore.</p>
-				<a class="btn btn-primary" href="/investigations/hampshire-apps/leaf-drop" role="button">Learn More</a>
+				<a class="btn btn-primary" href="leaf-drop-static.html" role="button">Learn More</a>
 			</div>
 			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
