began making site responsive via media queries

--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -36,11 +36,11 @@
 	<!-- Sign Up Or Sign In -->
 	<section class="container-fluid" id="login">
 		<form role="form">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-5">
-				<h2 class="users text-right">New Users</h2>
-				<button type="submit" class="btn btn-primary pull-right">Join PVCS</button>
+			<div class="col-xs-12 col-sm-6">
+				<h2 class="users">New Users</h2>
+				<button type="submit" class="btn btn-primary">Join PVCS</button>
 			</div>
-			<div class="col-xs-10 col-sm-5">
+			<div class="col-xs-12 col-sm-6">
 				<h2 class="users">Existing Users</h2>
 				<div class="form-group">
 					<input type="email" class="form-control" id="inputEmail" placeholder="email address">
