made responsive on desktops & portrait orientation phones

--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -57,25 +57,25 @@
 	<section class="container-fluid" id="environment">
 		<h2>Environmental Issues in the Pioneer Valley</h2>
 		<div class="row">
-			<div class="col-xs-8 col-sm-2 col-sm-offset-2">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-2">
 				<a class="thumbnail" data-target="#biodiversity-icon" data-toggle="modal" href="#">
 					<img alt="Biodiversity Icon" class="img-responsive" src="/images/issue_biodiversity.png"/>
 					<h3 class="caption text-center">Biodiversity</h3>
 				</a>
 			</div>
-			<div class="col-xs-8 col-sm-2">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-2">
 				<a class="thumbnail" data-target="#climate-change-icon" data-toggle="modal" href="#">
 					<img alt="Climate Change Icon" class="img-responsive" src="/images/issue_climatechange.png"/>
 					<h3 class="caption text-center">Climate Change</h3>
 				</a>
 			</div>
-			<div class="col-xs-8 col-sm-2">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-2">
 				<a class="thumbnail" data-target="#invasive-species-icon" data-toggle="modal" href="#">
 					<img alt="Invasive Species Icon" class="img-responsive" src="/images/issue_invasivespecies.png"/>
 					<h3 class="caption text-center">Invasive Species</h3>
 				</a>
 			</div>
-			<div class="col-xs-8 col-sm-2">
+			<div class="col-xs-8 col-xs-offset-2 col-sm-2">
 				<a class="thumbnail" data-target="#habitat-loss-icon" data-toggle="modal" href="#">
 					<img alt="Habitat Loss Icon" class="img-responsive" src="/images/issue_habitatloss.png"/>
 					<h3 class="caption text-center">Habitat Loss</h3>
@@ -181,7 +181,7 @@
 	<section class="container-fluid" id="projects">
 		<h2>Citizen Science Projects</h2>
 		<div class="row">
-			<div class="col-xs-10 col-sm-4 top-buffer">
+			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop.png"/>
 				</div>
@@ -189,7 +189,7 @@
 				<p class="text-danger">Echo Park Tonx sriracha, Truffaut tofu food truck paleo semiotics Marfa distillery small batch church-key 8-bit beard single-origin coffee. Jean shorts stumptown organic kitsch Pitchfork cred. Roof party meh ethical, readymade letterpress skateboard viral XOXO tofu distillery quinoa Austin single-origin coffee Echo Park mumblecore.</p>
 				<a class="btn btn-primary" href="leaf-drop-static.html" role="button">Learn More</a>
 			</div>
-			<div class="col-xs-10 col-sm-4 top-buffer">
+			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Image of buds on a tree" class="img-responsive" src="/images/icon_budburst.png"/>
 				</div>
@@ -197,7 +197,7 @@
 				<p>The Bud Burst project is a national citizen science project that seeks to learn more about how plants respond to changes in climate locally, regionally, and nationally. Participants report on appearances of plants, either tracking the progress of a single plant over the course of a year or once.</p>
 				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/bud-burst" role="button">Learn More</a> -->
 			</div>
-			<div class="col-xs-10 col-sm-4 top-buffer">
+			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Spotted salamander" class="img-responsive" src="/images/icon_salamanderwatch.png"/>
 				</div>
@@ -207,7 +207,7 @@
 			</div>
 		</div>
 		<div class="row top-buffer">
-			<div class="col-xs-10 col-sm-4 top-buffer">
+			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="Nest containing three eggs" class="img-responsive" src="/images/icon_nestwatch.png"/>
 				</div>
@@ -215,7 +215,7 @@
 				<p>Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.</p>
 		  		<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/neighborhood-nestwatch" role="button">Learn More</a> -->
 			</div>
-			<div class="col-xs-10 col-sm-4 top-buffer">
+			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="A firefly in a hand" class="img-responsive" src="/images/icon_firefly.png"/>
 				</div>
@@ -223,7 +223,7 @@
 				<p>The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.</p>
 		  <!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/firefly-watch" role="button">Learn More</a> -->
 			</div>
-			<div class="col-xs-10 col-sm-4 top-buffer">
+			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
 					<img alt="A monarch butterfly" class="img-responsive" src="/images/icon_monarch.png"/>
 				</div>
@@ -241,8 +241,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne">
-							<span class="caret"></span>&nbsp;&nbsp;&nbsp;What is the Pioneer Valley Citizen Science Collaboratory?
+						<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne">
+							What is the Pioneer Valley Citizen Science Collaboratory?
 				    	</a>
 			    	</h3>
 		    	</div>
@@ -255,8 +255,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo">
-							<span class="caret"></span>&nbsp;&nbsp;&nbsp;Where do scientists work?
+						<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo">
+							Where do scientists work?
 				    	</a>
 			    	</h3>
 		    	</div>
@@ -269,8 +269,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseThFour">
-							<span class="caret"></span>&nbsp;&nbsp;&nbsp;How does science affect me and my community?
+						<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseThFour">
+							How does science affect me and my community?
 				    	</a>
 			    	</h3>
 		    	</div>
@@ -283,8 +283,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseFour">
-							<span class="caret"></span>&nbsp;&nbsp;&nbsp;Who can be involved in scientific research?
+						<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseFour">
+							Who can be involved in scientific research?
 				    	</a>
 			    	</h3>
 		    	</div>
@@ -297,8 +297,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseFive">
-							<span class="caret"></span>&nbsp;&nbsp;&nbsp;What is citizen science?
+						<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseFive">
+							What is citizen science?
 				    	</a>
 			    	</h3>
 		    	</div>
@@ -311,8 +311,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseSix">
-							<span class="caret"></span>&nbsp;&nbsp;&nbsp;How can I get involved?
+						<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseSix">
+							How can I get involved?
 				    	</a>
 			    	</h3>
 		    	</div>
@@ -330,8 +330,8 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="panel-title">
-					<a data-toggle="collapse" data-parent="#accordion" data-target="#collapseSeven">
-						<span class="caret"></span>&nbsp;&nbsp;&nbsp;Who are the organizing members of the PVCS team?
+					<span></span><a data-toggle="collapse" data-parent="#accordion" data-target="#collapseSeven">
+						Who are the organizing members of the PVCS team?
 			    	</a>
 		    	</h3>
 	    	</div>
@@ -351,7 +351,9 @@
 	    			</div>
 	    			<div class="row">
 	    				<div class="col-md-2">
-	    					<img alt="Profile shot of Jonathan Gardner" class="img-circle img-responsive" src="/images/people/placeholder_male_superhero.png"/>
+	    					<div class="thumbnail">
+		    					<img alt="Profile shot of Jonathan Gardner" class="img-circle img-responsive" src="/images/people/placeholder_male_superhero.png"/>
+	    					</div>
 	    				</div>
 	    				<div class="col-md-10">
 	    					<h4>Jonathan Gardner</h4>
@@ -360,7 +362,9 @@
 	    			</div>
 	    			<div class="row">
 	    				<div class="col-md-2">
-	    					<img alt="Profile shot of Chelsea LaValley" class="img-circle img-responsive" src="/images/people/placeholder_female_superhero.png"/>
+	    					<div class="thumbnail">
+		    					<img alt="Profile shot of Chelsea LaValley" class="img-circle img-responsive" src="/images/people/placeholder_female_superhero.png"/>
+	    					</div>
 	    				</div>
 	    				<div class="col-md-10">
 	    					<h4>Chelsea LaValley</h4>
