created and styled leaf drop static page

--- a/leaf-drop-static.html
+++ b/leaf-drop-static.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Pioneer Valley Citizen Science Collaboratory</title>
+	<title>Pioneer Valley Citizen Science Collaboratory - Leaf Drop</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
@@ -19,48 +19,52 @@
 	<script type="text/javascript" src="js/app.js"></script>
 </head>
 
-<body>
+<body class="projects" id="leaf-drop">
 
 	<header class="container-fluid"></header>
-	<section>
-		<h1>Leaf Drop</h1>
-		<h2>Project Overview:</h2>
-		<p>This is a description of Leaf Drop and how it works Vegan Truffaut scenester Godard direct trade, master cleanse tousled normcore dreamcatcher single-origin coffee. Godard pickled literally PBR&B narwhal. You probably haven't heard of them banjo next level locavore Tonx four loko. Raw denim slow-carb plaid Odd Future lomo Helvetica.</p>
-		<p>Kogi crucifix next level, whatever keffiyeh authentic cardigan Vice Banksy disrupt PBR&B Pinterest you probably haven't heard of them biodiesel. Banjo biodiesel jean shorts Brooklyn, dreamcatcher fashion axe Odd Future mlkshk brunch scenester. High Life authentic try-hard twee aesthetic small batch Portland, dreamcatcher meh single-origin coffee kale chips whatever synth Shoreditch. Hashtag Tumblr Truffaut, kale chips twee irony before they sold out meggings Helvetica skateboard asymmetrical. Tattooed distillery PBR&B, biodiesel fashion axe mixtape actually direct trade. Swag blog occupy tousled bespoke. Vegan trust fund banh mi cornhole, Wes Anderson cray sustainable single-origin coffee VHS sriracha wolf Godard.</p>
-		<aside>
-			<h2>Leaf Drop Expeditions</h2>
-			<p></p>
-			<button class="btn btn-primary">Register</button>
-		</aside>
-		<section class="container-fluid" id="environment">
-			<h2>Environmental Issues:</h2>
-			<div class="row">
-				<div class="col-xs-8 col-sm-2 col-sm-offset-2">
-					<a class="thumbnail" data-target="#biodiversity-icon" data-toggle="modal" href="#">
-						<img alt="Biodiversity Icon" class="img-responsive" src="/images/issue_biodiversity.png"/>
-						<h3 class="caption text-center">Biodiversity</h3>
-					</a>
-				</div>
-				<div class="col-xs-8 col-sm-2">
-					<a class="thumbnail" data-target="#climate-change-icon" data-toggle="modal" href="#">
-						<img alt="Climate Change Icon" class="img-responsive" src="/images/issue_climatechange.png"/>
-						<h3 class="caption text-center">Climate Change</h3>
-					</a>
-				</div>
-				<div class="col-xs-8 col-sm-2">
-					<a class="thumbnail" data-target="#invasive-species-icon" data-toggle="modal" href="#">
-						<img alt="Invasive Species Icon" class="img-responsive" src="/images/issue_invasivespecies.png"/>
-						<h3 class="caption text-center">Invasive Species</h3>
-					</a>
-				</div>
-				<div class="col-xs-8 col-sm-2">
-					<a class="thumbnail" data-target="#habitat-loss-icon" data-toggle="modal" href="#">
-						<img alt="Habitat Loss Icon" class="img-responsive" src="/images/issue_habitatloss.png"/>
-						<h3 class="caption text-center">Habitat Loss</h3>
-					</a>
-				</div>
+	<div class="container-fluid">
+		<h2>Leaf Drop</h2>
+		<div class="row">
+			<section class="col-xs-12 col-sm-8">
+				<h3>Project Overview:</h3>
+				<p>This is a description of Leaf Drop and how it works Vegan Truffaut scenester Godard direct trade, master cleanse tousled normcore dreamcatcher single-origin coffee. Godard pickled literally PBR&B narwhal. You probably haven't heard of them banjo next level locavore Tonx four loko. Raw denim slow-carb plaid Odd Future lomo Helvetica.</p>
+				<p>Kogi crucifix next level, whatever keffiyeh authentic cardigan Vice Banksy disrupt PBR&B Pinterest you probably haven't heard of them biodiesel. Banjo biodiesel jean shorts Brooklyn, dreamcatcher fashion axe Odd Future mlkshk brunch scenester. High Life authentic try-hard twee aesthetic small batch Portland, dreamcatcher meh single-origin coffee kale chips whatever synth Shoreditch. Hashtag Tumblr Truffaut, kale chips twee irony before they sold out meggings Helvetica skateboard asymmetrical. Tattooed distillery PBR&B, biodiesel fashion axe mixtape actually direct trade. Swag blog occupy tousled bespoke. Vegan trust fund banh mi cornhole, Wes Anderson cray sustainable single-origin coffee VHS sriracha wolf Godard.</p>
+			</section>
+			<aside class="col-xs-12 col-sm-4">
+				<h3>Leaf Drop Expeditions</h3>
+				<p>Odd Future Godard fashion axe scenester. 90's, art party Austin sartorial, letterpress artisan Blue Bottle paleo Thundercats YOLO flannel vegan church-key direct trade chillwave. Literally cornhole pork belly, synth Thundercats fingerstache try-hard VHS McSweeney's. XOXO wolf literally slow-carb church-key deep.</p>
+				<a class="btn btn-primary" href="/investigations/leaf-drop">Launch the App</a>
+			</aside>
+		</div>
+	</div>
+	<section class="container-fluid" id="environment">
+		<h3>Environmental Issues:</h3>
+		<div class="row issues">
+			<div class="col-xs-8 col-sm-2 col-sm-offset-2">
+				<a class="thumbnail" data-target="#biodiversity-icon" data-toggle="modal" href="#">
+					<img alt="Biodiversity Icon" class="img-responsive" src="/images/issue_biodiversity.png"/>
+					<h3 class="caption text-center">Biodiversity</h3>
+				</a>
 			</div>
-		</section>
+			<div class="col-xs-8 col-sm-2">
+				<a class="thumbnail" data-target="#climate-change-icon" data-toggle="modal" href="#">
+					<img alt="Climate Change Icon" class="img-responsive" src="/images/issue_climatechange.png"/>
+					<h3 class="caption text-center">Climate Change</h3>
+				</a>
+			</div>
+			<div class="col-xs-8 col-sm-2">
+				<a class="thumbnail" data-target="#invasive-species-icon" data-toggle="modal" href="#">
+					<img alt="Invasive Species Icon" class="img-responsive" src="/images/issue_invasivespecies.png"/>
+					<h3 class="caption text-center">Invasive Species</h3>
+				</a>
+			</div>
+			<div class="col-xs-8 col-sm-2">
+				<a class="thumbnail" data-target="#habitat-loss-icon" data-toggle="modal" href="#">
+					<img alt="Habitat Loss Icon" class="img-responsive" src="/images/issue_habitatloss.png"/>
+					<h3 class="caption text-center">Habitat Loss</h3>
+				</a>
+			</div>
+		</div>
 
 		<!-- Modals -->
 		<!-- Biodiversity -->
@@ -154,7 +158,7 @@
 				</div>
 			</div>
 		</div>
-		<a class="btn btn-primary" href="hampshire-web.html#projects">Back to Projects</a>
+		<a class="btn btn-primary btn-back" href="index.html#projects"><span></span>Back to Projects</a>
 	</section>
 
 </body>
