--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-	<div class="jumbotron">
+	<div class="jumbotron" id="top">
 		<div class="container">
 			<h1><a href="#top">Pioneer Valley<br>Citizen Science Collaboratory</a></h1>
 			<ul class="nav nav-pills">
@@ -461,6 +461,7 @@
 	    		</div>
 	    	</div>
 		</div>
+		<a class="btn btn-primary btn-top pull-right" href="#top"><span></span>Return To Top</a>
 	</section>
 
 </body>
