adjusting Return to Top button

--- a/index.html
+++ b/index.html
@@ -461,8 +461,9 @@
 	    		</div>
 	    	</div>
 		</div>
-		<a class="btn btn-primary btn-top pull-right" href="#top"><span></span>Return To Top</a>
 	</section>
-
+	<footer>
+		<a class="btn btn-primary btn-top pull-right" href="#top"><span></span>Return To Top</a>
+	</footer>
 </body>
 </html>
